Tentando usar OAuth 2.0 com Keycloak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/apidb?serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+keycloak.realm = sead
+keycloak.auth-server-url = http://localhost:8180/auth
+keycloak.resource = webapi-keycloak
+keycloak.use-resource-role-mappings = true
+keycloak.public-client=true
+keycloak.bearer-only=true
