--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/apidb?serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://postgresqldb:5432/apidb?serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=postgres
